organizes participate section using collapsable content

--- a/static_parallax/index.html
+++ b/static_parallax/index.html
@@ -143,27 +143,75 @@
 <div class="banner" style="min-height: 100%">
     <div style="position: relative; z-index: 3; background-color: transparent">
         <a id="participate"><h1 class="jumbo"><strong>Participate</strong></h1></a><br>
-        <h2>> Become a Member</h2><br><hr>
-        <h2>> Make a Donation</h2><br>
-        <h3>As a non-profit organization we rely on donations and charitable contributions from people like yourself to expand quality recreation opportunities across our state. Please consider contributing to our cause today</h3><br><hr>
-        <h2>> Volunteer With Us</h2><br>
-        <h3><b>What to bring to a Trail Work Event:</b></h3><br>
-        <h3>▪ Water, snacks, and a pack to haul it in</h3><br>
-        <h3>▪ Work boots or tough hiking boots (sturdy footwear)</h3><br>
-        <h3>▪ Rain gear, layers, work attire</h3><br>
-        <h3>▪ Safety glasses and work gloves if you have them</h3><br>
-        <h3>▪ Bathing Suite if at Magone!</h3><br>
 
-        <h3><b>EOTA will provide:</h3><br>
-        <h3>▪ All the tools</h3><br>
-        <h3>▪ Loaner bicycle should you need one</h3><br>
-        <h3>▪ Water and a few snacks if you need them</h3><br>
+         <p> 
+            <button class="btn btn-collapse" type="button" data-toggle="collapse" data-target="#membership" aria-expanded="false" aria-controls="collapseExample">
+                <h2>> Become a Member</h2>
+            </button>
+        </p>
+        <div class="collapse" id="membership">
+            <div class="card card-block">
+                <h2>Why Become an EOTA Supporter</h2><br>
+                <ul>
+                    <li><h3><strong>1. GET AND KEEP ACCESS TO MORE TRAILS-</strong> EOTA advocates tirelessly for new trails and protects access to existing trails.</h3></li>
+                    <li><h3><b>2. SUPPORT TRAIL BUILDING AND MAINTENANCE-</b> Your dollars will help us build and maintain trails all across Eastern Oregon.</h3></li>
+                    <li><h3><b>3. TOGETHER WE HAVE MORE POWER-</b> More supporters strengthen our voice when we talk to land managers and politicians.</h3></li>
+                    <li><h3><b>4. KNOW WHAT'S HAPPENING FIRST-</b> Supporters are kept up to date on advocacy issues, events, classes, races and rides.</h3></li>
+                    <li><h3><b>5. BE PART OF A COMMUNITY-</b> Connect with other trail users and advocates. Meet and ride with like-minded recreationists who support fun, sustainable, legal trails.</h3></li>
+                </ul><br>
+                <h2><button class="btn btn-collapse"><h2><strong>Join Today</strong></h2></button></h2>
+            </div>
+        </div><hr>
+
+
+         <p> 
+            <button class="btn btn-collapse" type="button" data-toggle="collapse" data-target="#donate" aria-expanded="false" aria-controls="collapseExample">
+                <h2>> Make a Donation</h2>
+            </button>
+        </p>
+        <div class="collapse" id="donate">
+            <div class="card card-block">
+                <h3>As a non-profit organization we rely on donations and charitable contributions from people like yourself to expand quality recreation opportunities across our state. Please consider contributing to our cause today!</h3><br>
+                <h2><button class="btn btn-collapse"><h2><strong>Donate</strong></h2></button></h2>
+            </div>
+        </div><hr>
+
+
+         <p> 
+            <button class="btn btn-collapse" type="button" data-toggle="collapse" data-target="#volunteer" aria-expanded="false" aria-controls="collapseExample">
+                <h2>> Volunteer With Us</h2>
+            </button>
+         </p>
+         <div class="collapse" id="volunteer">
+            <div class="card card-block volunteer">
+                <h3><b>What to bring to a Trail Work Event:</b></h3><br>
+                <ul>
+                    <li><h3>▪ Water, food, and a pack to haul it in</h3></li>
+                    <li><h3>▪ Work boots or tough hiking boots (sturdy footwear)</h3></li>
+                    <li><h3>▪ Rain gear, layers, work attire</h3></li>
+                    <li><h3>▪ Safety glasses and work gloves if you have them</h3></li>
+                    <li><h3>▪ Bathing Suite if at Magone!</h3></li>
+                </ul><br>
+
+                <h3><b>EOTA will provide:</b></h3><br>
+                <ul>
+                    <li><h3>▪ All the tools</h3></li>
+                    <li><h3>▪ Loaner bicycle should you need one</h3></li>
+                    <li><h3>▪ Water and a few snacks if you need them</h3></li>
+                </ul>
+
+            </div>
+        </div>      
+
     </div>
 </div>
 
 
 
 
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script> 
 <script type="text/javascript" src="main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
